@@ -1,3 +1,9 @@
+2012-01-17 18:32-EST Gregory John Casamento <greg.casamento@gmail.com>
+
+	* Source/NSXMLDocument.m
+	* Source/NSXMLElement.m: add code to insertChild:atIndex: to
+	handle edge cases.
+
 2012-01-17 04:05-EST Gregory John Casamento <greg.casamento@gmail.com>
 
 	* Source/NSXMLElement.m
